# CPP-Design-Patterns

./: .gitignore  CMakeLists.txt  LICENSE
src/: curiously_recurring_template_pattern.cpp  dependency_inversion_principle.cpp  example_test_individual_class_method.cpp  interface_segregation_principle.cpp  main.cpp
